# Practical-Works

./: .gitignore  README.md
IIA_2223/NetLogo/: Modelo Base.nlogo  Modelo Melhorado.nlogo
LS_2122/: install  run  run_build
LS_2122/word-search/: package-lock.json  package.json
POO_2223/: .gitignore  README.md  README.rm
POO_2223/FS 2023/: CMakeLists.txt  main.cpp  shared.h
POO_2223/FS 2023/consts/: consts.cpp  consts.h
POO_2223/FS 2023/engine/: engine.cpp  engine.h
POO_2223/FS 2023/entity/: entity.cpp  entity.h
POO_2223/FS 2023/entity/animals/: animal.cpp  animal.h  animals.h  kangaroo.cpp  kangaroo.h  mistery.cpp  mistery.h  rabbit.cpp  rabbit.h  sheep.cpp  sheep.h  wolf.cpp  wolf.h
POO_2223/FS 2023/entity/foods/: beef.cpp  beef.h  carrot.cpp  carrot.h  corpses.cpp  corpses.h  food.cpp  food.h  foods.h  grass.cpp  grass.h  misteryfood.cpp  misteryfood.h
POO_2223/FS 2023/insparse/: insparse.cpp  insparse.h
POO_2223/FS 2023/reserve/: reserve.cpp  reserve.h
POO_2223/FS 2023/reserve/camera/: camera.cpp  camera.h
POO_2223/FS 2023/utils/: utils.cpp  utils.h
POO_2223/binaries/: comandos.txt  constantes.txt
P_2122/: .gitignore
P_2122/Ultimate TicTacToe/: main.c  makefile
SO2_2223/: .gitignore
SO_2223/: .gitignore  README.md  README.rm  makefile
SO_2223/backend/: main.c  makefile
SO_2223/binaries/: run_backend  run_frontend
SO_2223/frontend/: main.c  makefile
TWEB_2122/: .gitignore  events.js  index.html  style.scss
TWEB_2122/images/: Edifício_Miguel.jfif  LUMIA_Lisbon.jfif  Marinha_Guincho.jfif  Moradia_Moderna.jfif  (+2 more)
(+282 files in other folders)
